--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -1,5 +1,5 @@
 service:
-  name: serverless-todo-app
+  name: goswami-serverless-todo-app
 
 plugins:
   - serverless-webpack
@@ -15,7 +15,7 @@ provider:
   environment:
     TODOS_TABLE: Todos-${self:provider.stage}
     AUTH_0_SECRET: zzJrcVKE0g3BMxFPUcbAz26TkfR16Gd40xbIRdp3Li_mbtsd0Mmdm0NVk0_SKV4G
-    S3_BUCKET: ross-serverless-todo-s3-${self:provider.stage}
+    S3_BUCKET: goswami-serverless-todo-s3-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
 
 functions:
@@ -112,6 +112,18 @@ functions:
 
 resources:
   Resources:
+    GatewayResponseDefault4XX:
+      Type: AWS::ApiGateway::GatewayResponse
+      Properties:
+        ResponseParameters:
+          gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
+          gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+          gatewayresponse.header.Access-Control-Allow-Methods: "'GET,OPTIONS,POST'"
+        ResponseType: DEFAULT_4XX
+        RestApiId:
+          Ref: ApiGatewayRestApi
+
+  
     # TODO: Add any necessary AWS resources
     TodosDynamoDBTable:
       Type: AWS::DynamoDB::Table
