--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -54,6 +54,7 @@ functions:
           method: post
           path: todos
           cors: true
+      - headers: 'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'
     iamRoleStatementsName: ${self:service.name}-create-todo-role-${self:provider.stage}
     iamRoleStatements:
     - Effect: Allow
