--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -1,5 +1,5 @@
 service:
-  name: aagoswami-serverless-todo-app
+  name: goswamiamit-serverless-todo-app
 
 plugins:
   - serverless-webpack
@@ -16,7 +16,7 @@ provider:
     TODOS_TABLE: Todos-${self:provider.stage}
     TODOS_INDEX_NAME: UserIdIndex
     AUTH_0_SECRET: zzJrcVKE0g3BMxFPUcbAz26TkfR16Gd40xbIRdp3Li_mbtsd0Mmdm0NVk0_SKV4G
-    S3_BUCKET: goswami-serverless-todo-s3-${self:provider.stage}
+    S3_BUCKET: goswamiamit-serverless-todo-s3-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
 
 functions:
@@ -31,7 +31,7 @@ functions:
           method: get 
           path: todos
           cors: true
-          authorizer: Auth
+#          authorizer: Auth
     iamRoleStatementsName: ${self:service.name}-get-todos-role-${self:provider.stage}
     iamRoleStatements:
       - Effect: Allow
@@ -156,6 +156,8 @@ resources:
             Projection:
               ProjectionType: ALL
         BillingMode: PAY_PER_REQUEST
+        StreamSpecification:
+          StreamViewType: NEW_IMAGE
         TableName: ${self:provider.environment.TODOS_TABLE}
 
     AttachmentBucket:
