Implementing the code reivew comments after review of the serverless project submission. Decoupled the business logic and the data access layer in the codebase. Added Xray tracing. Implemented the request validator for update and create lambda functions. modified the dynamoDB schema as per the project specifications and now userid - partition key, todoid - sort key. Also implemented all the other code review comments. I added the details about all implemented in the README file as well

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -1,9 +1,28 @@
 service:
-  name: goswamiamit-serverless-todo-app
+  name: goswamiamitreview-serverless-todo-app
 
 plugins:
   - serverless-webpack
   - serverless-iam-roles-per-function
+  - serverless-reqvalidator-plugin
+  - serverless-aws-documentation
+
+# This customer section is used for validating the request before processing.
+# We can make use of different JSON models for validating the requests.  
+custom:
+  documentation:
+    api:
+      info:
+        version: v1.0.0
+        title: Amit Goswami ToDos API
+        description: Serverless application for ToDos
+    models:
+      - name: CreateTodoRequest
+        contentType: application/json
+        schema: ${file(models/create-todo-request.json)}
+      - name: UpdateTodoRequest
+        contentType: application/json
+        schema: ${file(models/update-todo-request.json)}
 
 provider:
   name: aws
@@ -11,6 +30,10 @@ provider:
 
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'us-east-1'}
+
+  tracing:
+    lambda: true
+    apiGateway: true
 
   environment:
     TODOS_TABLE: Todos-${self:provider.stage}
@@ -67,7 +90,13 @@ functions:
               - X-Amz-User-Agent
             authorizer: Auth
             #allowCredentials: false
-      #- headers: 'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'
+            reqValidatorName: RequestBodyValidator
+            documentation:
+              summary: Create a new Todo Items
+              description: Create a new Todo Items
+              requestModels:
+                'application/json': CreateTodoRequest
+     #- headers: 'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'
     iamRoleStatementsName: ${self:service.name}-create-todo-role-${self:provider.stage}
     iamRoleStatements:
     - Effect: Allow
@@ -90,6 +119,13 @@ functions:
           method: patch
           path: todos/{todoId}
           cors: true
+          reqValidatorName: RequestBodyValidator
+          documentation:
+            summary: Update a todo Item
+            description: Update a todo Item
+            requestModels:
+              'application/json': UpdateTodoRequest
+
     iamRoleStatementsName: ${self:service.name}-update-todo-role-${self:provider.stage}
     iamRoleStatements:
     - Effect: Allow
@@ -97,6 +133,11 @@ functions:
         - dynamodb:UpdateItem
         - dynamodb:PutItem
       Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
+    - Effect: "Allow"
+      Action:
+        - xray:PutTelemetryRecords
+        - xray:PutTraceSegments
+      Resource: "*"
 
   # TODO: Configure this function
   DeleteTodo:
@@ -112,6 +153,11 @@ functions:
       Action:
         - dynamodb:DeleteItem
       Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
+    - Effect: "Allow"
+      Action:
+        - xray:PutTelemetryRecords
+        - xray:PutTraceSegments
+      Resource: "*"
 
   # TODO: Configure this function
   GenerateUploadUrl:
@@ -123,31 +169,47 @@ functions:
           cors: true
     iamRoleStatementsName: ${self:service.name}-generate-url-role-${self:provider.stage}
     iamRoleStatements:
-    - Effect: Allow
-      Action:
-        - dynamodb:UpdateItem
-      Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
-    - Effect: Allow
-      Action:
-      - s3:PutObject
-      - s3:GetObject
-      Resource: arn:aws:s3:::${self:provider.environment.S3_BUCKET}/*
+      - Effect: Allow
+        Action:
+          - dynamodb:UpdateItem
+          - dynamodb:Query
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
+      - Effect: Allow
+        Action:
+          - s3:PutObject
+        Resource: arn:aws:s3:::${self:provider.environment.S3_BUCKET}/*
+      - Effect: "Allow"
+        Action:
+          - xray:PutTelemetryRecords
+          - xray:PutTraceSegments
+        Resource: "*"
 
 resources:
   Resources:
   
+    RequestBodyValidator:
+      Type: AWS::ApiGateway::RequestValidator
+      Properties:
+        Name: 'request-body-validator'
+        RestApiId:
+          Ref: ApiGatewayRestApi
+        ValidateRequestBody: true
+        ValidateRequestParameters: false
+
     # TODO: Add any necessary AWS resources
     TodosDynamoDBTable:
       Type: AWS::DynamoDB::Table
       Properties:
         AttributeDefinitions:
-          - AttributeName: todoId
-            AttributeType: S
           - AttributeName: userId
             AttributeType: S
-        KeySchema:
           - AttributeName: todoId
+            AttributeType: S
+        KeySchema:
+          - AttributeName: userId
             KeyType: HASH
+          - AttributeName: todoId
+            KeyType: RANGE
         GlobalSecondaryIndexes:
           - IndexName: ${self:provider.environment.TODOS_INDEX_NAME}
             KeySchema:
